tests/suite/snapshots/suite__check__tests__check__bad_generic_6.xi.snap
---
source: tests/suite/check.rs
assertion_line: 35
expression: Snapshot(context)
---
Error: Semantic error
    ╭─[tests/check/bad_generic_6.xi:4:16]
    │
  4 │         return field + field
    ·                ──┬──  
    ·                  ╰──── Expected int but found bool
    · 
 12 │     b: A::<B, bool> = new A::<B, bool>
    ·        ──────┬─────  
    ·              ╰─────── Template instantiated here
    │
    ├─[tests/check/bad_generic_6.ixi:2:8]
    │
  2 │     a: T::<B>
    ·        ───┬──  
    ·           ╰──── Template instantiated here
────╯

